# libcaer

./: .clang-format  .cmake-format  .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CMakeLists.txt  ChangeLog  README  README.Windows  caer-base.cmake  conanfile.txt  libcaer.pc.in  libcaerConfig.cmake.in  package.xml  sonar-project.properties
.github/workflows/: ci.yaml
.gitlab/: CODEOWNERS
.gitlab/issue_templates/: Bug.md  Documentation.md  New Feature.md  Refactoring.md  Technical Evaluation.md
.gitlab/merge_request_templates/: Merge Request.md
bindings/python_swig/: build-python-wrapper-py2.sh  build-python-wrapper-py3.sh  build-python-wrapper.sh  pyflags.i
bindings/python_swig/examples/: davis.py  dvs128.py  dynapse.py
cmakemod/: caer-base.cmake  inivation-setup.cmake  libcaerConfig.cmake.in
docs/: .gitignore  65-inivation.rules  CMakeLists.txt  Doxyfile  RELEASE.txt  docs-build.py  index.html  requirements.txt
docs/html/: annotated.html  classes.html  common_8h.html  common_8h_source.html  config_8h.html  config_8h_source.html  davis_8h.html  davis_8h_source.html  device_8h.html  device_8h_source.html  dir_07b86ffc266b39efa5bbdc0e9fdb330a.html  dir_7d604191edc08013a26f918aa8ef79ad.html  dvs128_8h.html  dvs128_8h_source.html  dynapse_8h.html  dynapse_8h_source.html  ear_8h.html  ear_8h_source.html  edvs_8h.html  edvs_8h_source.html  files.html  frame_8h.html  frame_8h_source.html  frame__utils_8h.html  frame__utils_8h_source.html  frame__utils__opencv_8h.html  frame__utils__opencv_8h_source.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_defs_d.html  globals_defs_e.html  globals_defs_f.html  globals_defs_g.html  globals_defs_i.html  globals_defs_l.html  (+77 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_10.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  defines_e.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+31 more)
docs/source/: conf.py  index.md
docs/udev-rules/: 65-inivation.rules
docs/udev-rules/selinux/: 65-inivation.rules
examples/: .gitignore  CMakeLists.txt  README  das1v4_simple.c  davis_cvgui.cpp  davis_cvgui_filters.cpp  davis_enable_aer.cpp  davis_microphones.cpp  davis_rpi_benchmark.cpp  davis_simple.c  davis_simple.cpp  device_discovery.c  dv_explorer.cpp  dv_explorer_s.cpp  dvs128_simple.c  dvs128_simple.cpp  dvx_bw_test.cpp  dynapse_simple.c  dynapse_simple.cpp  edvs_simple.c  edvs_simple.cpp  mipi_cx3.cpp
include/: CMakeLists.txt  frame_utils.h  frame_utils_opencv.h  libcaer.h.in  libcaer_in.h  log.h  network.h  portable_endian.h
include/devices/: das1v4.h  davis.h  device.h  device_discover.h  dvs128.h  dvs132s.h  dynapse.h  edvs.h  filter_dvs.h  serial.h  usb.h
include/events/: common.h  config.h  ear.h  frame.h  imu6.h  imu9.h  matrix4x4.h  packetContainer.h  point1d.h  point2d.h  point3d.h  point4d.h  polarity.h  sample.h  special.h  spike.h
include/filters/: dvs.h  dvs_noise.h
include/libcaer/: log.h
include/libcaer/devices/: davis.h  device.h  device_discover.h  dv_explorer.h  dv_explorer_s.h  dvs132s.h  dvxplorer.h  mipi_cx3.h  samsung_evk.h  usb.h
include/libcaer/events/: special.h
include/libcaercpp/: ringbuffer.hpp
include/libcaercpp/devices/: davis.hpp  device_discover.hpp  dv_explorer.hpp  dv_explorer_s.hpp  dvxplorer.hpp  mipi_cx3.hpp
include/libcaercpp/events/: common.hpp  frame.hpp  imu6.hpp  imu9.hpp  packetContainer.hpp  polarity.hpp  special.hpp  spike.hpp  utils.hpp
includecpp/: CMakeLists.txt  frame_utils.hpp  frame_utils_opencv.hpp  libcaer.hpp  network.hpp  ringbuffer.hpp
includecpp/devices/: davis.hpp  device.hpp  device_discover.hpp  dvs128.hpp  dynapse.hpp  edvs.hpp  serial.hpp  usb.hpp
includecpp/events/: common.hpp  config.hpp  ear.hpp  frame.hpp  imu6.hpp  imu9.hpp  packetContainer.hpp  point1d.hpp  point2d.hpp  point3d.hpp  point4d.hpp  polarity.hpp  sample.hpp  special.hpp  spike.hpp  utils.hpp
includecpp/filters/: dvs_noise.hpp
packaging/debian-source-package/: .gitignore  packageUbuntu.sh
packaging/debian-source-package/artful/: control  rules
packaging/debian-source-package/bionic/: control  libcaer-dev.install  libcaer.install  rules
packaging/debian-source-package/cosmic/: control  rules
packaging/debian-source-package/eoan/: control  rules
packaging/debian-source-package/trusty/: control  libcaer.install  rules
packaging/debian-source-package/xenial/: control  rules
packaging/debian-source-package/zesty/: control  rules
packaging/fedora-source-package/: libcaer.spec  packageFedora.sh
packaging/gentoo-ebuild-repository/profiles/: repo_name
packaging/linux/: arch-release.sh  brew-release.sh  gentoo-release.sh  libcaer-arch.pkgbuild  libcaer-brew.rb  libcaer-gentoo.ebuild
packaging/ubuntu-source-package/: packageUbuntu.sh
packaging/ubuntu-source-package/bionic/: libcaer.install
packaging/ubuntu-source-package/eoan/: rules
packaging/ubuntu-source-package/focal/: rules
packaging/ubuntu-source-package/impish/: control  libcaer.install
src/: .gitignore  CMakeLists.txt  autoexposure.c  autoexposure.h  c11threads_posix.h  c11threads_win32.h  container_generation.h  das1v4.c  das1v4.h  data_exchange.h  davis.c  davis.h  davis_common.c  davis_common.h  davis_fx2.c  davis_fx2.h  davis_fx3.c  davis_fx3.h  davis_rpi.c  davis_rpi.h  device.c  device_discover.c  dv_explorer.c  dv_explorer.h  dv_explorer_s.c  dv_explorer_s.h  dvs128.c  dvs128.h  dvs132s.c  dvs132s.h  dvxplorer.c  dvxplorer.h  dynapse.c  dynapse.h  edvs.c  edvs.h  events.c  filters_dvs_noise.c  frame_utils.c  frame_utils_opencv.cpp  (+12 more)
src/ringbuffer/: ringbuffer.c  ringbuffer.h
(+6 files in other folders)
