<?xml version="1.0"?>
<package format="3">
  <name>libcaer</name>
  <version>1.0.1</version>
  <description>library for event based sensors</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>BSD-2</license>

  <depend>libusb-1.0-dev</depend>
  <depend>pkg-config</depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
