<?xml version="1.0"?>
<package format="3">
  <name>libcaer</name>
  <version>1.0.2</version>
  <description>library for event based sensors</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>BSD-2</license>

  <depend>libusb-1.0-dev</depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>cmake</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
