SET(INC_INSTALL_DIR ${CMAKE_INSTALL_INCLUDEDIR}/${CMAKE_PROJECT_NAME}cpp)
INSTALL(FILES libcaer.hpp network.hpp frame_utils.hpp DESTINATION ${INC_INSTALL_DIR})
INSTALL(DIRECTORY events DESTINATION ${INC_INSTALL_DIR} FILES_MATCHING PATTERN "*.hpp")
INSTALL(DIRECTORY devices DESTINATION ${INC_INSTALL_DIR} FILES_MATCHING PATTERN "*.hpp")

IF (ENABLE_OPENCV)
	INSTALL(FILES frame_utils_opencv.hpp DESTINATION ${INC_INSTALL_DIR})
ENDIF()
